# cmake_note

./: cmake.md  cmake笔记.md  cmake笔记2.md  index.rst  新建文本文档.md
CMakeTutorial-master/: readme.md
CMakeTutorial-master/CMakeLists-1-Test/: CMakeLists.txt  README.md
CMakeTutorial-master/CMakeLists-2-Test/: CMakeLists.txt  README.md
CMakeTutorial-master/CMakeLists-3-Test/: README.md
CMakeTutorial-master/CMakeLists-4-Test/: CMakeLists.txt  README.md
CMakeTutorial-master/CMakeLists-5-Test/: readme.md
CMakeTutorial-master/CMakeLists-6-Test/: readme.md
CMakeTutorial-master/CMakeLists-7-Test/: readme.md
CMakeTutorial-master/CMakeLists-8-Test/: readme.md
VsUseCMake/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
cmake-examples-master/01-basic/cpp标准/i-common-method/: CMakeLists.txt
cmake-examples-master/01-basic/cpp标准/法三/: CMakeLists.txt
cmake-examples-master/01-basic/使用第三方库/: CMakeLists.txt  main.cpp
cmake-examples-master/01-basic/安装/: CMakeLists.txt  cmake-examples.conf
cmake-examples-master/多个子项目/A-basic/: CMakeLists.txt
code/Class_7/: CMakeLists.txt
code/cpp/: CMakeLists.txt  main.cpp
code/cpp/include/ff/: fun.h
code/cpp/src/ff/: CMakeLists.txt  fun.cpp
code/构建静态和动态库/cmakelearn/: CMakeLists.txt
code/构建静态和动态库/cmakelearn/lib/: CMakeLists.txt  hello.cpp
code/构建静态和动态库/cmakeuse/: CMakeLists.txt
code/构建静态和动态库/cmakeuse/src/: .C.swp
mutil/: CMakeLists.txt  main.cpp
mutil/hello/: CMakeLists.txt  hello.cpp
mutil/world/: CMakeLists.txt  world.cpp  world.h
